# create-yew-material-app

./: .gitignore  package.json
crates/yew-material-app/: Cargo.toml  README.md  config-features.js  package-lock.json  package.json
crates/yew-material-app/public/: browser.js  index.html
crates/yew-material-app/src/: index.rs  lib.rs  theme.rs
