[package]
name = "yew-material-app"
edition = "2018"
readme = "./README.md"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[dependencies]
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.57"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]}
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-material-macro = { git = "https://github.com/alibaba-inc/yew-material/", branch = "master" }
yew-material-utils = { git = "https://github.com/alibaba-inc/yew-material/", branch = "master" }

[dependencies.yew-material]
git = "https://github.com/alibaba-inc/yew-material/"
branch = "master"
features = [
    "flex",
    "appbar",
    "icon_button",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"